# kids

./: setup.cfg
doc/: reference.md
kids/: wsgi.py
kids/api/v1/openstack/: __init__.py
kids/cmd/: api.py  manage.py
kids/common/: config.py  wsgi.py
kids/engine/: service.py  worker.py
kids/rpc/: client.py
