[metadata]
name = kids
summary = Openstack Modules Imitate
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    kids

[entry_points]
console_scripts =
    kids-api = kids.cmd.api:main

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kids/locale/kids.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
